[project]
name = "address-count"
version = "0.1.0"
description = "BIP39 and SLIP39 chain address derivation utilities"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "bip_utils>=2.9.0",
  "slip39>=1.0.0",
  "shamir-mnemonic>=0.3.0",
  "base58>=2.1.1",
  "bech32>=1.2.0",
  "pynacl>=1.5.0",
  "cashaddress>=1.0.6",
  "ecdsa>=0.19.0",
  "eth-hash>=0.7.0",
  "pycryptodome>=3.20.0",
  "solders>=0.21.0",
  "bip32>=4.0",
]

[project.optional-dependencies]
chains = [
  "aptos-sdk>=0.10.0",
  "cosmospy>=6.0.0",
  "pycardano>=0.11.0",
  "pyinjective>=1.0.0",
  "pysui>=0.80.0",
  "stellar-sdk>=9.0.0",
  "tonsdk>=1.0.13",
  "monero>=1.1.1",
]

[project.scripts]
derive-all-addresses = "address_derivation.derive_all:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
